# mobilecam-bridge

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml
android-companion/: README.md
configs/: example_rtsp.yaml  example_uvc_linux.yaml  example_uvc_windows.yaml
docs/: INTEGRATION.md
scripts/: run_gui_linux.sh  run_gui_windows.bat
src/mobilecam_platform/: __init__.py  android_control.py  cli.py  config.py  gui.py  provider.py
src/mobilecam_platform/adapters/: __init__.py  gstreamer.py
src/mobilecam_platform/backends/: __init__.py  base.py  opencv_backend.py
tests/: test_config.py  test_gstreamer.py
