[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mobilecam-platform"
version = "0.1.0"
description = "Platform-neutral Android phone camera bridge for Windows, Linux, TI/TIDL and RK3588/AXON targets"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Arun Jeeva"}]
dependencies = [
  "opencv-python>=4.8",
  "PySide6>=6.6",
  "PyYAML>=6.0",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]
headless = ["opencv-python-headless>=4.8"]

[project.scripts]
mobilecam = "mobilecam_platform.cli:main"
mobilecam-gui = "mobilecam_platform.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
